MERN-Stack-Ecommerce-App-master/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusion-backend-service
spec:
  selector:
    app: fusion-backend
  ports:
    - port: 5000
      targetPort: 8000
  type: ClusterIP
