MERN-Stack-Ecommerce-App-master/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusion-frontend-service
spec:
  selector:
    app: fusion-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
