MERN-Stack-Ecommerce-App-master/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusion-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - host: 20-235-128-106.sslip.io

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: fusion-frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: fusion-backend-service
            port:
              number: 5000
